# firetail

./: Cargo.toml  README.md
src/: action.rs  app.rs  cli.rs  filter.rs  main.rs  packet_filter.rs  port_filter.rs
src/cidr/: mod.rs
src/ingesters/: file_log.rs  mod.rs  stdin.rs
src/ui/: log_info.rs  log_table.rs  log_view.rs  mod.rs
